# simplestatic

./: Cargo.toml  Dockerfile  README.md  Readme.md  config.sample.toml  index.html  test.html  test.js
.github/workflows/: docker.yml
js/: test.js
src/: args.rs  config.rs  default.html  errors.rs  files.rs  main.rs  mime.types  template.rs
