[package]
name = "simplestatic"
version = "0.1.0"
authors = ["Trans ry"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
argh = "0.1.4"
regex = "^1.4"
ring = "0.16.19"
data-encoding = "2.3.1"
minifier = "0.0.31"
toml = "0.5.8"
serde = "1.0"
serde_derive = "1.0"
