[package]
name = "simplestatic"
description = "lightweight and minimalistic single-page webserver"
version = "1.0.0"
authors = ["Trans ry <support@transry.fi>", "Teascade <teascade@gmail.com>"]
edition = "2018"
repository = "https://github.com/Transyhdistys/simplestatic"
homepage = "https://github.com/Transyhdistys/simplestatic"
license = "AGPL-3.0"
readme = "README.md"
keywords = ["template", "web", "http", "server", "html"]
categories = ["web-programming::http-server"]

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
argh = "0.1.4"
regex = "^1.4"
ring = "0.16.19"
data-encoding = "2.3.1"
minifier = "0.0.31"
toml = "0.5.8"
serde = "1.0"
serde_derive = "1.0"
